--- a/statistics.ipynb
+++ b/statistics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +30,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Пробный запуск"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "10 вершин в графе и 1 запрос:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "# Длина пути (Мин./Ср./Макс.);\n",
-    "# Задействованные ресурсы сети или количество дуг, задействованные в поиске (Мин./Ср./Макс.);\n",
-    "# Объем хранимой информации на узлах (Мин./Ср./Макс.)."
+    "can = CAN(10, 42, mode='run', random_pointers=None)\n",
+    "can.generate()\n",
+    "can.generate_action(position=(0.55, 0.55), sender_id=0)\n",
+    "can.visualize(size=512, max_iter=1000, show_names=True, show_path=True, show_frames=True)"
    ]
   },
   {
@@ -68,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 сообщение"
+    "## 1 запрос"
    ]
   },
   {
@@ -204,6 +217,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Распределение числа соседей:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 171,
    "metadata": {},
@@ -229,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 100 сообщений"
+    "## 100 запросов"
    ]
   },
   {
@@ -268,6 +288,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Как быстро 100 отправленных в один момент запросов достигнут цели:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 207,
    "metadata": {},
@@ -292,6 +319,13 @@
     "plt.plot(sum_stats(stats)['n_actions'][2])\n",
     "plt.title('max number of actions')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Распределение длин путей:"
    ]
   },
   {
@@ -321,7 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1000 сообщений"
+    "## 1000 запросов"
    ]
   },
   {
@@ -422,7 +456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10000 сообщений"
+    "## 10000 запросов"
    ]
   },
   {
